--- a/Graduation-Thesis/2016-02-11-Note.md
+++ b/Graduation-Thesis/2016-02-11-Note.md
@@ -10,3 +10,53 @@
 - `mouseover`,`mouseenter`,`mouseleave`,`mouseout`的区别以及使用场景
 
 - 主页面结构布局从按照从左到右改变成**先主要页面内容，再左侧导航布局**
+
+### 详细内容 `mouseover` 与 `mouseenter`
+
+*默认这两个事件都是被绑定在最外层容器上*
+
+||`mouseover`|`mouseenter`|
+|:-|:-|:-|
+|冒泡|冒泡|不冒泡|
+|后代元素中移动|触发|不触发|
+|性能|优秀|存在隐患|
+
+> 下面就是性能区别的原因 (*翻译自MDN对`mouseenter`的概念*)
+
+![mouseenter](https://developer.mozilla.org/@api/deki/files/5908/=mouseenter.png)
+
+> 上面图示,当光标移入时,`mouseenter`事件将被发送到**每个层次的元素节点**上面.例子中就有4个事件被发送到了各个层次的元素上面.
+
+![mouseover](https://developer.mozilla.org/@api/deki/files/5909/=mouseover.png)
+
+> 仅有一个`mouseover`事件被发送到最深层次的元素节点上,然后该事件开始随着层次向上冒泡,直到被监听事件取消或者达到根结点.
+
+### 教你选择
+
+- 深层次的元素结构,优先使用`mouseover`
+- 后代元素没有填充父容器,出现`margin`,`padding`或者`border`,可以选择`mouseenter`
+
+```HTML
+<style>
+div{
+  padding: 20px;
+  border: 2px #ccc dashed;
+}
+</style>
+
+<div class=container>
+  <div>
+    <div>
+      <p>This is Test</p>
+    </div>
+  </div>
+</div>
+
+<script>
+// 因为有padding的存在 就会多次触发 不是我们想要的结果
+// 尤其会影响`e.target`的值
+$(".container").on("mouseover", function(){
+  console.log("mouseover")
+});
+</script>
+```
